<resources>
    <string name="app_name">ATHENA</string>

    <string name="ed_login_email_error">Invalid email address</string>
    <string name="ed_login_password_error">Password must be at least 8 characters wide</string>
    <string name="ed_login_email_hint">Email</string>
    <string name="ed_login_password_hint">Password</string>
    <string name="iv_login_description">logo app</string>
    <string name="tv_login_text">Sign in to your account</string>
    <string name="btn_login_text">Login</string>
    <string name="tv_login_to_register_hint_text">Not have an account?</string>
    <string name="tv_login_to_register_text">Sign Up</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="tv_forgot_password_text">Create new password</string>
    <string name="ed_login_re_password_hint">Confirm Password</string>
    <string name="btn_reset_password_text">Reset Password</string>
    <string name="iv_register_description">logo app</string>
    <string name="tv_register_text">Create an account</string>
    <string name="ed_register_name_hint">Name</string>
    <string name="ed_register_email_hint">Email</string>
    <string name="ed_register_password_hint">Password</string>
    <string name="btn_register_text">Register</string>
    <string name="tv_register_to_login_hint_text">Already have an account?</string>
    <string name="tv_register_to_login_text">Log in</string>
    <string name="register_invalid_input_toast">invalid input data</string>
    <string name="register_failed_toast">Register failed: %1$s</string>
    <string name="register_success_toast">Register success, login to explore</string>
    <string name="login_invalid_input_toast">you have invalid input</string>
    <string name="login_failed_toast">Login failed: %1$s</string>
    <string name="login_greetings_toast">Welcome %1$s</string>
    <string name="delete_description">Clear</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="camera_x_description">Camera X</string>
    <string name="preview_image">preview image</string>
    <string name="image_saved">gambar absensi disimpan</string>
    <string name="analyze_deleted">hapus absensi</string>
    <string name="back_button">back button</string>
    <string name="analyze_completed">Absent Gained</string>
    <string name="result">Hasil Absensi</string>
    <string name="save_result">Save Absensi</string>
    <string name="analyze_saved">Absensi</string>
    <string name="save_deleted">data absensi dihapus</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. Model error</string>
    <string name="no_image">no image selected</string>
    <string name="image_not_selected">select image from gallery</string>
    <string name="analyze_failed">gagal mendapat absensi</string>
    <string name="save_success">absensi berhasil disimpan</string>
    <string name="save_no_data">tidak ada data absensi, silahkan simpan data di camera button</string>
    <string name="welcome_to_athena">Welcome to ATHENA !!!</string>
    <string name="profile_image">profile_image</string>
    <string name="features_text">Features</string>
    <string name="back_description">Back</string>
</resources>